--- a/disccrate.fsproj
+++ b/disccrate.fsproj
@@ -6,11 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Program.fs" />
+    <Compile Include="cli.fs" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.5" />
+    <PackageReference Include="MySqlConnector" Version="2.3.5" />
+    <PackageReference Include="ParkSquare.Discogs" Version="1.0.35" />
   </ItemGroup>
 
 </Project>
