--- a/disccrate.fsproj
+++ b/disccrate.fsproj
@@ -7,6 +7,8 @@
 
   <ItemGroup>
     <Compile Include="cli.fs" />
+    <Compile Include="database.fs" />
+    <Compile Include="discogs.fs" />
   </ItemGroup>
 
   <ItemGroup>
